--- a/packedgo/back/users-service/src/main/resources/application.properties
+++ b/packedgo/back/users-service/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=users-service
+
+--- Configuración de la base de datos H2 (con archivo) ---
+spring.datasource.url=jdbc:h2:file:./testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
+
+Habilita la consola web y el servidor TCP para conexiones externas
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.allow-non-secure=true
+
+JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+Puerto de la aplicación
+server.port=8080
