--- a/packedgo/back/users-service/pom.xml
+++ b/packedgo/back/users-service/pom.xml
@@ -9,7 +9,7 @@
         <version>3.5.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.packed_go</groupId>
     <artifactId>users-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>users-service</name>
