--- a/packedgo/back/auth-service/src/main/resources/application.properties
+++ b/packedgo/back/auth-service/src/main/resources/application.properties
@@ -27,6 +27,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.docker.compose.enabled=false
 spring.docker.compose.lifecycle-management=none
 
+# External Services Configuration
+app.services.users-service.base-url=${USERS_SERVICE_URL:http://localhost:8082}
+
 # Logging
 logging.level.com.packed_go.auth_service=DEBUG
 logging.level.org.springframework.security=DEBUG
