--- a/packedgo/back/users-service/src/main/resources/application.properties
+++ b/packedgo/back/users-service/src/main/resources/application.properties
@@ -1,21 +1,22 @@
 spring.application.name=users-service
+server.port=${SERVER_PORT:8082}
 
---- Configuración de la base de datos H2 (con archivo) ---
-spring.datasource.url=jdbc:h2:file:./testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
-
-Habilita la consola web y el servidor TCP para conexiones externas
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.settings.allow-non-secure=true
-
-JPA / Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Database Configuration
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5434/users_db}
+spring.datasource.username=${DATABASE_USER:admin}
+spring.datasource.password=${DATABASE_PASSWORD:admin}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
 
-Puerto de la aplicación
-server.port=8080
+# Docker Compose Configuration - Disable auto-discovery
+spring.docker.compose.enabled=false
+spring.docker.compose.lifecycle-management=none
+
+# Logging
+logging.level.com.packed_go.users_service=DEBUG
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
