--- a/packedgo/back/users-service/src/main/resources/application.properties
+++ b/packedgo/back/users-service/src/main/resources/application.properties
@@ -1,21 +1,29 @@
+# ==============================================
+# USERS SERVICE - APPLICATION CONFIGURATION
+# ==============================================
+# Todas las variables se obtienen del archivo .env
+
 spring.application.name=users-service
-server.port=${SERVER_PORT:8082}
+server.port=${SERVER_PORT}
 
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5434/users_db}
-spring.datasource.username=${DATABASE_USER:admin}
-spring.datasource.password=${DATABASE_PASSWORD:admin}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
+
+# External Services Configuration
+app.services.auth-service.base-url=${AUTH_SERVICE_URL}
 
 # Docker Compose Configuration - Disable auto-discovery
 spring.docker.compose.enabled=false
 spring.docker.compose.lifecycle-management=none
 
 # Logging
-logging.level.com.packed_go.users_service=DEBUG
+logging.level.com.packed_go.users_service=${LOGGING_LEVEL_USERS}
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
