--- a/packedgo/back/analytics-service/.env
+++ b/packedgo/back/analytics-service/.env
@@ -1,27 +1,28 @@
 # ==============================================
-# USERS SERVICE - ENVIRONMENT CONFIGURATION
+# ANALYTICS SERVICE - ENVIRONMENT CONFIGURATION
 # ==============================================
-# Copiar este archivo a .env y completar con valores reales
 
 # Server Configuration
-SERVER_PORT=8082
+SERVER_PORT=8083
 
 # Database Configuration (Docker)
-DATABASE_URL=jdbc:postgresql://users-db:5432/users_db
-DATABASE_USER=your_users_db_user_here
-DATABASE_PASSWORD=your_secure_users_db_password_here
+DATABASE_URL=jdbc:postgresql://analytics-db:5432/analytics_db
+DATABASE_USER=analytics_user
+DATABASE_PASSWORD=analytics_password
 
 # External Services Configuration
 AUTH_SERVICE_URL=http://auth-service:8081
+USERS_SERVICE_URL=http://users-service:8082
+ORDER_SERVICE_URL=http://order-service:8084
 
 # Logging Configuration
-LOGGING_LEVEL_USERS=DEBUG
+LOGGING_LEVEL_ANALYTICS=DEBUG
 
 # ==============================================
 # DOCKER COMPOSE VARIABLES
 # ==============================================
 
 # Database Container Configuration
-POSTGRES_DB=users_db
-POSTGRES_USER=your_users_db_user_here
-POSTGRES_PASSWORD=your_secure_users_db_password_here
+POSTGRES_DB=analytics_db
+POSTGRES_USER=analytics_user
+POSTGRES_PASSWORD=analytics_password
