--- a/packedgo/back/analytics-service/src/main/resources/application.properties
+++ b/packedgo/back/analytics-service/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+# ==============================================
+# ANALYTICS SERVICE - APPLICATION CONFIGURATION
+# ==============================================
+# Todas las variables se obtienen del archivo .env
+
 spring.application.name=analytics-service
+server.port=${SERVER_PORT}
+
+# Database Configuration
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
+
+# External Services Configuration
+app.services.auth-service.base-url=${AUTH_SERVICE_URL}
+app.services.users-service.base-url=${USERS_SERVICE_URL}
+app.services.order-service.base-url=${ORDER_SERVICE_URL}
+
+# Docker Compose Configuration - Disable auto-discovery
+spring.docker.compose.enabled=false
+spring.docker.compose.lifecycle-management=none
+
+# Logging
+logging.level.com.packed_go.analytics_service=${LOGGING_LEVEL_ANALYTICS}
