--- a/packedgo/back/auth-service/.env.example
+++ b/packedgo/back/auth-service/.env.example
@@ -1,19 +1,41 @@
-# Database Configuration
-DATABASE_URL=jdbc:postgresql://db:5432/auth_db
-DATABASE_USER=your_db_user
-DATABASE_PASSWORD=your_db_password
-
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
-
-# Email Configuration (para futuras funcionalidades)
-EMAIL_USERNAME=your_email@gmail.com
-EMAIL_PASSWORD=your_email_password
+# ==============================================
+# AUTH SERVICE - ENVIRONMENT CONFIGURATION
+# ==============================================
+# Copiar este archivo a .env y completar con valores reales
 
 # Server Configuration
 SERVER_PORT=8081
 
-# Database Configuration for local development (when running outside Docker)
-LOCAL_DATABASE_URL=jdbc:postgresql://localhost:5433/auth_db
-LOCAL_DATABASE_USER=your_local_db_user
-LOCAL_DATABASE_PASSWORD=your_local_db_password
+# Database Configuration (Docker)
+DATABASE_URL=jdbc:postgresql://auth-db:5432/auth_db
+DATABASE_USER=your_db_user_here
+DATABASE_PASSWORD=your_secure_db_password_here
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_minimum_32_characters_here
+JWT_EXPIRATION=3600000
+JWT_REFRESH_EXPIRATION=2592000000
+
+# Email Configuration (Gmail SMTP)
+EMAIL_USERNAME=your_gmail@gmail.com
+EMAIL_PASSWORD=your_gmail_app_password_here
+EMAIL_FROM=noreply@yourcompany.com
+
+# Frontend Configuration
+FRONTEND_BASE_URL=http://localhost:8080
+
+# External Services Configuration
+USERS_SERVICE_URL=http://users-service:8082
+
+# Logging Configuration
+LOGGING_LEVEL_AUTH=DEBUG
+LOGGING_LEVEL_SECURITY=DEBUG
+
+# ==============================================
+# DOCKER COMPOSE VARIABLES
+# ==============================================
+
+# Database Container Configuration
+POSTGRES_DB=auth_db
+POSTGRES_USER=your_db_user_here
+POSTGRES_PASSWORD=your_secure_db_password_here
