--- a/packedgo/back/auth-service/compose.yaml
+++ b/packedgo/back/auth-service/compose.yaml
@@ -1,40 +1,42 @@
 services:
-  db:
+  auth-db:
     image: postgres:15-alpine
     restart: always
     environment:
-      POSTGRES_DB: auth_db
-      POSTGRES_USER: ${DATABASE_USER:-admin}
-      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-admin}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       TZ: 'America/Argentina/Buenos_Aires'
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - auth_pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DATABASE_USER:-admin} -d auth_db"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
       timeout: 5s
       retries: 5
     networks:
       - auth-network
+    container_name: auth-db
 
   auth-service:
     build: .
     restart: always
     depends_on:
-      db:
+      auth-db:
         condition: service_healthy
     ports:
-      - "${SERVER_PORT:-8081}:${SERVER_PORT:-8081}"
+      - "${SERVER_PORT}:${SERVER_PORT}"
     env_file:
       - .env
     networks:
       - auth-network
+    container_name: auth-service
 
 networks:
   auth-network:
     driver: bridge
 
 volumes:
-  pgdata:
+  auth_pgdata:
