--- a/packedgo/back/auth-service/src/main/resources/application.properties
+++ b/packedgo/back/auth-service/src/main/resources/application.properties
@@ -1,35 +1,44 @@
+# ==============================================
+# AUTH SERVICE - APPLICATION CONFIGURATION
+# ==============================================
+# Todas las variables se obtienen del archivo .env
+
 spring.application.name=auth-service
-server.port=${SERVER_PORT:8081}
+server.port=${SERVER_PORT}
 
 # Database Configuration
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/auth_db}
-spring.datasource.username=${DATABASE_USER:admin}
-spring.datasource.password=${DATABASE_PASSWORD:admin}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
 
 # JWT Configuration
-app.jwt.secret=${JWT_SECRET:mySecretKey123456789PackedGoAuth2025VerySecureKey}
-app.jwt.expiration=3600000
-app.jwt.refresh-expiration=2592000000
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration=${JWT_EXPIRATION}
+app.jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
 # Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME:}
-spring.mail.password=${EMAIL_PASSWORD:}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Frontend Configuration
+app.frontend.base-url=${FRONTEND_BASE_URL}
+app.email.from=${EMAIL_FROM}
 
 # Docker Compose Configuration - Disable auto-discovery
 spring.docker.compose.enabled=false
 spring.docker.compose.lifecycle-management=none
 
 # External Services Configuration
-app.services.users-service.base-url=${USERS_SERVICE_URL:http://localhost:8082}
+app.services.users-service.base-url=${USERS_SERVICE_URL}
 
 # Logging
-logging.level.com.packed_go.auth_service=DEBUG
-logging.level.org.springframework.security=DEBUG
+logging.level.com.packed_go.auth_service=${LOGGING_LEVEL_AUTH}
+logging.level.org.springframework.security=${LOGGING_LEVEL_SECURITY}
