--- a/packedgo/back/consumption-service/.env
+++ b/packedgo/back/consumption-service/.env
@@ -1,27 +1,27 @@
 # ==============================================
-# USERS SERVICE - ENVIRONMENT CONFIGURATION
+# CONSUMPTION SERVICE - ENVIRONMENT CONFIGURATION
 # ==============================================
-# Copiar este archivo a .env y completar con valores reales
 
 # Server Configuration
-SERVER_PORT=8082
+SERVER_PORT=8085
 
 # Database Configuration (Docker)
-DATABASE_URL=jdbc:postgresql://users-db:5432/users_db
-DATABASE_USER=your_users_db_user_here
-DATABASE_PASSWORD=your_secure_users_db_password_here
+DATABASE_URL=jdbc:postgresql://consumption-db:5432/consumption_db
+DATABASE_USER=consumption_user
+DATABASE_PASSWORD=consumption_password
 
 # External Services Configuration
 AUTH_SERVICE_URL=http://auth-service:8081
+USERS_SERVICE_URL=http://users-service:8082
 
 # Logging Configuration
-LOGGING_LEVEL_USERS=DEBUG
+LOGGING_LEVEL_CONSUMPTION=DEBUG
 
 # ==============================================
 # DOCKER COMPOSE VARIABLES
 # ==============================================
 
 # Database Container Configuration
-POSTGRES_DB=users_db
-POSTGRES_USER=your_users_db_user_here
-POSTGRES_PASSWORD=your_secure_users_db_password_here
+POSTGRES_DB=consumption_db
+POSTGRES_USER=consumption_user
+POSTGRES_PASSWORD=consumption_password
