--- a/packedgo/back/event-service/.env.example
+++ b/packedgo/back/event-service/.env.example
@@ -1,27 +1,28 @@
 # ==============================================
-# USERS SERVICE - ENVIRONMENT CONFIGURATION
+# EVENT SERVICE - ENVIRONMENT CONFIGURATION
 # ==============================================
 # Copiar este archivo a .env y completar con valores reales
 
 # Server Configuration
-SERVER_PORT=8082
+SERVER_PORT=8086
 
 # Database Configuration (Docker)
-DATABASE_URL=jdbc:postgresql://users-db:5432/users_db
-DATABASE_USER=your_users_db_user_here
-DATABASE_PASSWORD=your_secure_users_db_password_here
+DATABASE_URL=jdbc:postgresql://event-db:5432/event_db
+DATABASE_USER=your_event_db_user_here
+DATABASE_PASSWORD=your_secure_event_db_password_here
 
 # External Services Configuration
 AUTH_SERVICE_URL=http://auth-service:8081
+USERS_SERVICE_URL=http://users-service:8082
 
 # Logging Configuration
-LOGGING_LEVEL_USERS=DEBUG
+LOGGING_LEVEL_EVENT=DEBUG
 
 # ==============================================
 # DOCKER COMPOSE VARIABLES
 # ==============================================
 
 # Database Container Configuration
-POSTGRES_DB=users_db
-POSTGRES_USER=your_users_db_user_here
-POSTGRES_PASSWORD=your_secure_users_db_password_here
+POSTGRES_DB=event_db
+POSTGRES_USER=your_event_db_user_here
+POSTGRES_PASSWORD=your_secure_event_db_password_here
