--- a/packedgo/back/docker-compose.yml
+++ b/packedgo/back/docker-compose.yml
@@ -8,12 +8,10 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
+    env_file:
+      - ./auth-service/.env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-db:5432/auth_db
-      - SPRING_DATASOURCE_USERNAME=auth_user
-      - SPRING_DATASOURCE_PASSWORD=auth_password
-      - APP_SERVICES_USERS-SERVICE_BASE-URL=http://users-service:8082
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005
     depends_on:
       auth-db:
@@ -50,11 +48,10 @@ services:
     ports:
       - "8082:8082"
       - "5006:5006"  # Debug port for users-service
+    env_file:
+      - ./users-service/.env
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://users-db:5432/users_db
-      - SPRING_DATASOURCE_USERNAME=users_user
-      - SPRING_DATASOURCE_PASSWORD=users_password
       - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5006
     depends_on:
       users-db:
