--- a/packedgo/back/event-service/pom.xml
+++ b/packedgo/back/event-service/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>hibernate-spatial</artifactId>
             <version>6.2.6.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.8</version>
+        </dependency>
 
 	</dependencies>
 
