--- a/packedgo/back/event-service-v2/src/main/resources/application.properties
+++ b/packedgo/back/event-service-v2/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración de concurrencia y bloqueos
+spring.jpa.properties.hibernate.jdbc.batch_size=25
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+# Timeouts para bloqueos pesimistas (en milisegundos)
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
