Jwt entre microservicios

--- a/packedgo/back/users-service/src/main/resources/application.properties
+++ b/packedgo/back/users-service/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
 # External Services Configuration
 app.services.auth-service.base-url=${AUTH_SERVICE_URL}
 
+# JWT Configuration
+app.jwt.secret=${JWT_SECRET}
+
 # Docker Compose Configuration - Disable auto-discovery
 spring.docker.compose.enabled=false
 spring.docker.compose.lifecycle-management=none
