--- a/packedgo/back/event-service/.env
+++ b/packedgo/back/event-service/.env
@@ -14,6 +14,9 @@ DATABASE_PASSWORD=event_password
 AUTH_SERVICE_URL=http://auth-service:8081
 USERS_SERVICE_URL=http://users-service:8082
 
+# JWT Configuration
+JWT_SECRET=mySecretKey123456789PackedGoAuth2025VerySecureKey
+
 # Logging Configuration
 LOGGING_LEVEL_EVENT=DEBUG
 
