--- a/packedgo/back/event-service/src/main/resources/application-docker.properties
+++ b/packedgo/back/event-service/src/main/resources/application-docker.properties
@@ -1,10 +1,10 @@
 # Server Configuration
 server.port=8086
 
-# PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5433/event_db
-spring.datasource.username=admin
-spring.datasource.password=admin123
+# PostgreSQL Database Configuration (Docker)
+spring.datasource.url=jdbc:postgresql://event-db:5432/event_db
+spring.datasource.username=event_user
+spring.datasource.password=event_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
@@ -25,3 +25,7 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 # Timeouts para bloqueos pesimistas (en milisegundos)
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
