--- a/packedgo/back/event-service/src/main/resources/application.properties
+++ b/packedgo/back/event-service/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# HikariCP Configuration - Disable autocommit to allow Spring transaction management
+spring.datasource.hikari.auto-commit=false
+
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -24,4 +27,17 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 
 # Timeouts para bloqueos pesimistas (en milisegundos)
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+
+# ============================================
+# DOCKER PROFILE CONFIGURATION
+# ============================================
+spring.config.activate.on-profile=docker
+
+# PostgreSQL Database Configuration (Docker)
+spring.datasource.url=jdbc:postgresql://event-db:5432/event_db
+spring.datasource.username=event_user
+spring.datasource.password=event_password
+
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
