Frontend migrado a Angular

--- a/packedgo/back/event-service/src/main/resources/application.properties
+++ b/packedgo/back/event-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Server Configuration
 server.port=8086
+server.servlet.context-path=/api
 
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:5433/event_db
