--- a/packedgo/back/analytics-service/src/main/resources/application.properties
+++ b/packedgo/back/analytics-service/src/main/resources/application.properties
@@ -5,6 +5,7 @@
 
 spring.application.name=analytics-service
 server.port=${SERVER_PORT}
+server.servlet.context-path=/api
 
 # Database Configuration
 spring.datasource.url=${DATABASE_URL}
