--- a/packedgo/back/order-service/src/main/resources/application.properties
+++ b/packedgo/back/order-service/src/main/resources/application.properties
@@ -1,2 +1,57 @@
+# ==============================================
+# ORDER SERVICE - APPLICATION CONFIGURATION
+# ==============================================
+
 spring.application.name=order-service
+server.port=${SERVER_PORT}
 server.servlet.context-path=/api
+
+# ==============================================
+# DATABASE CONFIGURATION
+# ==============================================
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL:false}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ==============================================
+# JWT CONFIGURATION
+# ==============================================
+app.jwt.secret=${JWT_SECRET}
+
+# ==============================================
+# EXTERNAL SERVICES CONFIGURATION
+# ==============================================
+app.services.event-service.base-url=${EVENT_SERVICE_URL}
+app.services.auth-service.base-url=${AUTH_SERVICE_URL}
+
+# ==============================================
+# CART CONFIGURATION
+# ==============================================
+app.cart.expiration-minutes=${CART_EXPIRATION_MINUTES}
+app.cart.cleanup-interval-minutes=${CART_CLEANUP_INTERVAL_MINUTES}
+
+# ==============================================
+# DOCKER COMPOSE CONFIGURATION
+# ==============================================
+spring.docker.compose.enabled=false
+spring.docker.compose.lifecycle-management=none
+
+# ==============================================
+# ACTUATOR CONFIGURATION
+# ==============================================
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+
+# ==============================================
+# LOGGING CONFIGURATION
+# ==============================================
+logging.level.root=${LOG_LEVEL_ROOT:INFO}
+logging.level.com.packed_go.order_service=${LOGGING_LEVEL_ORDER:DEBUG}
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
