--- a/packedgo/back/order-service/.env
+++ b/packedgo/back/order-service/.env
@@ -11,9 +11,17 @@ DATABASE_USER=order_user
 DATABASE_PASSWORD=order_password
 
 # External Services Configuration
-AUTH_SERVICE_URL=http://auth-service:8081
+AUTH_SERVICE_URL=http://auth-service:8081/api
+EVENT_SERVICE_URL=http://event-service:8086/api
 USERS_SERVICE_URL=http://users-service:8082
 PAYMENT_SERVICE_URL=http://payment-service:8087
+
+# JWT Configuration
+JWT_SECRET=mySecretKey123456789PackedGoAuth2025VerySecureKey
+
+# Cart Configuration
+CART_EXPIRATION_MINUTES=10
+CART_CLEANUP_INTERVAL_MINUTES=5
 
 # Logging Configuration
 LOGGING_LEVEL_ORDER=DEBUG
