integración con mercadopago

--- a/packedgo/back/order-service/src/main/resources/application.properties
+++ b/packedgo/back/order-service/src/main/resources/application.properties
@@ -30,10 +30,11 @@ app.jwt.secret=${JWT_SECRET}
 # ==============================================
 app.services.event-service.base-url=${EVENT_SERVICE_URL}
 app.services.auth-service.base-url=${AUTH_SERVICE_URL}
+app.services.payment-service.base-url=${PAYMENT_SERVICE_URL:http://localhost:8087}
 
 # ==============================================
 # CART CONFIGURATION
-# ==============================================
+# ============================================== 
 app.cart.expiration-minutes=${CART_EXPIRATION_MINUTES}
 app.cart.cleanup-interval-minutes=${CART_CLEANUP_INTERVAL_MINUTES}
 
