--- a/packedgo/back/payment-service/.gitignore
+++ b/packedgo/back/payment-service/.gitignore
@@ -31,3 +31,13 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Environment Variables ###
+.env
+.env.local
+.env.*.local
+*.env
+
+### Database Init (may contain sensitive data) ###
+database-init.sql
+
