--- a/packedgo/back/docker-compose.yml
+++ b/packedgo/back/docker-compose.yml
@@ -158,6 +158,47 @@ services:
     networks:
       - packedgo-network
 
+  # Payment Service
+  payment-service:
+    build:
+      context: ./payment-service
+      dockerfile: Dockerfile
+    ports:
+      - "8087:8082"
+      - "5009:5009"  # Debug port for payment-service
+    env_file:
+      - ./payment-service/.env
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - JAVA_TOOL_OPTIONS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5009
+      - DB_URL=jdbc:postgresql://payment-db:5432/payment_db
+      - DB_USERNAME=payment_user
+      - DB_PASSWORD=payment_password
+    depends_on:
+      payment-db:
+        condition: service_healthy
+    networks:
+      - packedgo-network
+
+  # Payment Database
+  payment-db:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: payment_db
+      POSTGRES_USER: payment_user
+      POSTGRES_PASSWORD: payment_password
+    ports:
+      - "5437:5432"
+    volumes:
+      - payment_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U payment_user -d payment_db"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    networks:
+      - packedgo-network
+
 networks:
   packedgo-network:
     driver: bridge
@@ -167,3 +208,4 @@ volumes:
   users_db_data:
   event_db_data:
   order_db_data:
+  payment_db_data:
