--- a/packedgo/back/auth-service/src/main/resources/application.properties
+++ b/packedgo/back/auth-service/src/main/resources/application.properties
@@ -21,17 +21,18 @@ app.jwt.secret=${JWT_SECRET}
 app.jwt.expiration=${JWT_EXPIRATION}
 app.jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION}
 
-# Email Configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${EMAIL_USERNAME}
-spring.mail.password=${EMAIL_PASSWORD}
+# Mailtrap Email Configuration (SMTP)
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=false
+app.email.from=${EMAIL_FROM}
 
 # Frontend Configuration
 app.frontend.base-url=${FRONTEND_BASE_URL}
-app.email.from=${EMAIL_FROM}
 
 # Docker Compose Configuration - Disable auto-discovery
 spring.docker.compose.enabled=false
