--- a/packedgo/back/event-service/src/main/resources/application.properties
+++ b/packedgo/back/event-service/src/main/resources/application.properties
@@ -29,15 +29,24 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 # Timeouts para bloqueos pesimistas (en milisegundos)
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 # ============================================
 # DOCKER PROFILE CONFIGURATION
 # ============================================
+---
 spring.config.activate.on-profile=docker
 
 # PostgreSQL Database Configuration (Docker)
 spring.datasource.url=jdbc:postgresql://event-db:5432/event_db
 spring.datasource.username=event_user
 spring.datasource.password=event_password
+
+# Actuator for health checks
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
 
 # Actuator for health checks
 management.endpoints.web.exposure.include=health,info
