feat: Implementación completa de MercadoPago con polling automático
- Configurado puerto 8085 para payment-service
- Agregadas credenciales de prueba de MercadoPago
- Implementado endpoint POST /api/payments/verify/{orderId} para verificación manual
- Frontend con verificación automática de pagos pendientes
- Banner visual de progreso en order-success
- Deshabilitado webhook (usando polling para MVP)
- Incluidos archivos .env para facilitar setup del MVP
- Documentación completa y scripts de testing

--- a/packedgo/back/payment-service/.gitignore
+++ b/packedgo/back/payment-service/.gitignore
@@ -33,10 +33,11 @@ build/
 .vscode/
 
 ### Environment Variables ###
-.env
-.env.local
-.env.*.local
-*.env
+# .env files included for MVP testing (private repo)
+# .env
+# .env.local
+# .env.*.local
+# *.env
 
 ### Database Init (may contain sensitive data) ###
 database-init.sql
