--- a/packedgo/back/payment-service/src/main/resources/application.properties
+++ b/packedgo/back/payment-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=payment-service
 
 # Server Configuration
-server.port=${SERVER_PORT:8082}
+server.port=${SERVER_PORT:8085}
 server.servlet.context-path=/api
 
 # Database Configuration - PostgreSQL
@@ -35,7 +35,7 @@ management.health.db.enabled=true
 # MercadoPago Configuration
 mercadopago.access.token=${MERCADOPAGO_ACCESS_TOKEN:APP_USR-1160956444149133-101721-055aec8c374959f568654aeda79ccd31-2932397372}
 mercadopago.public.key=${MERCADOPAGO_PUBLIC_KEY:APP_USR-704e26b4-2405-4401-8cd9-fe981e4f70ae}
-mercadopago.webhook.url=${WEBHOOK_URL:http://localhost:8087/api/payments/webhook}
+mercadopago.webhook.url=${WEBHOOK_URL:}
 
 # CORS Configuration
 cors.allowed-origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:4200}
