--- a/packedgo/back/.gitignore
+++ b/packedgo/back/.gitignore
@@ -1,8 +1,8 @@
-# Environment Variables
-.env
-.env.local
-.env.*.local
-*.env
+# Environment Variables - Included for MVP testing (private repo)
+# .env
+# .env.local
+# .env.*.local
+# *.env
 
 # Database init files with credentials
 **/database-init.sql
