--- a/packedgo/back/auth-service/.gitignore
+++ b/packedgo/back/auth-service/.gitignore
@@ -33,8 +33,9 @@ build/
 .vscode/
 
 ### Environment Variables ###
-.env
-.env.local
-.env.production
-.env.test
-*.env
+# .env files included for MVP testing (private repo)
+# .env
+# .env.local
+# .env.production
+# .env.test
+# *.env
