--- a/packedgo/back/auth-service/.env
+++ b/packedgo/back/auth-service/.env
@@ -27,7 +27,7 @@ EMAIL_FROM=packedgo.events@gmail.com
 FRONTEND_BASE_URL=http://localhost:3000
 
 # External Services Configuration
-USERS_SERVICE_URL=http://users-service:8082
+USERS_SERVICE_URL=http://users-service:8082/api
 
 # Logging Configuration
 LOGGING_LEVEL_AUTH=DEBUG
