--- a/packedgo/back/analytics-service/src/main/resources/application.properties
+++ b/packedgo/back/analytics-service/src/main/resources/application.properties
@@ -3,7 +3,37 @@
 # ==============================================
 # Todas las variables se obtienen del archivo .env
 
+# Server Configuration
+server.port=${SERVER_PORT:8087}
+
+# Application Name
 spring.application.name=analytics-service
+
+# Database Configuration
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JWT Configuration
+app.jwt.secret=${JWT_SECRET}
+
+# External Services
+app.services.auth-url=${AUTH_SERVICE_URL:http://localhost:8081}
+app.services.users-url=${USERS_SERVICE_URL:http://localhost:8082}
+app.services.event-url=${EVENT_SERVICE_URL:http://localhost:8086}
+app.services.order-url=${ORDER_SERVICE_URL:http://localhost:8084}
+app.services.payment-url=${PAYMENT_SERVICE_URL:http://localhost:8085}
+
+# Logging Configuration
+logging.level.com.packed_go.analytics_service=${LOGGING_LEVEL_ANALYTICS:DEBUG}
+logging.level.root=${LOGGING_LEVEL_ROOT:INFO}
 server.port=${SERVER_PORT}
 server.servlet.context-path=/api
 
