fix: se le dió estilo al email, se corrigió la hora de compra y del ticket, se agregaron los qr al email, se corrigió el boton ver mis entradas en el checkout de compra extisa y el boton ver mis tickets en el email (antes redirigía al dashboard principal del customer y no a la sección Mis Entradas

--- a/packedgo/back/order-service/pom.xml
+++ b/packedgo/back/order-service/pom.xml
@@ -95,6 +95,18 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- ZXing for QR Code Generation -->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.1</version>
+		</dependency>
+
 		<!-- ModelMapper for DTO conversion -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
