--- a/packedgo/back/order-service/src/main/resources/application.properties
+++ b/packedgo/back/order-service/src/main/resources/application.properties
@@ -65,6 +65,12 @@ management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
 
 # ==============================================
+# TIMEZONE CONFIGURATION
+# ==============================================
+spring.jackson.time-zone=America/Argentina/Buenos_Aires
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Argentina/Buenos_Aires
+
+# ==============================================
 # LOGGING CONFIGURATION
 # ==============================================
 logging.level.root=${LOG_LEVEL_ROOT:INFO}
