server funcional mvp

--- a/packedgo/back/order-service/.env.example
+++ b/packedgo/back/order-service/.env.example
@@ -16,6 +16,9 @@ AUTH_SERVICE_URL=http://auth-service:8081
 USERS_SERVICE_URL=http://users-service:8082
 PAYMENT_SERVICE_URL=http://payment-service:8087
 
+# Frontend URL (for Stripe redirects and email links)
+FRONTEND_BASE_URL=http://localhost:3000
+
 # Logging Configuration
 LOGGING_LEVEL_ORDER=DEBUG
 
