--- a/packedgo/back/order-service/src/main/resources/application.properties
+++ b/packedgo/back/order-service/src/main/resources/application.properties
@@ -26,6 +26,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 app.jwt.secret=${JWT_SECRET}
 
 # ==============================================
+# FRONTEND CONFIGURATION
+# ==============================================
+# Used for Stripe success/cancel redirects and links in confirmation emails
+app.frontend.base-url=${FRONTEND_BASE_URL:http://localhost:3000}
+
+# ==============================================
 # EXTERNAL SERVICES CONFIGURATION
 # ==============================================
 app.services.event-service.base-url=${EVENT_SERVICE_URL}
