--- a/packedgo/back/payment-service/.env.example
+++ b/packedgo/back/payment-service/.env.example
@@ -27,10 +27,10 @@ STRIPE_SECRET_KEY=sk_test_your_secret_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
 # Frontend URL (for Stripe redirects)
-FRONTEND_URL=http://localhost:4200
+FRONTEND_URL=http://localhost:3000
 
 # CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:4200
+CORS_ORIGINS=http://localhost:3000,http://localhost:4200
 
 # Admin Configuration
 ADMIN_ID=1
